# ghslpy

./: .gitignore  README.md  pyproject.toml  run.py
assets/: ghsl_tiles.geojson
ghslpy/: __init__.py  download.py  products.py  utils.py  vectorize.py
ghslpy/metrics/: pixelwise.py
ghslpy/vectors/: smod_functions.py  vectorize.py
notebooks/: lagos_example.ipynb
