[project]
name = "ghslpy"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas (>=1.1.0,<2.0.0)",
    "geocube (>=0.7.1,<0.8.0)",
    "xarray (>=2023.1.0)",
    "rioxarray (>=0.14.0)",
    "shapely (>=2.0.0)",
    "tabulate (>=0.9.0)",
    "osmnx (>=2.0.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "cartopy (>=0.24.1,<0.25.0)",
    "adjusttext (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
